fixed spacing for inner text on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,8 @@
 #inner {
   width: 50%;
   margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
   font-family: 'Work Sans', sans-serif;
   font-size: 1.3vw;
 }
@@ -329,6 +331,8 @@ a.divLink {
   margin: 0 auto;
   font-family: 'Work Sans', sans-serif;
   font-size: 4vw;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 #ocean {
 	margin-top: 25%;
